--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="avatar">
           <img
             id="imgAvatar"
-            src="picture/c4dce75e-0de8-4923-9d38-a5d53e195578.jpg"
+            src="picture/451069626_440057682200722_4700395683419697783_n.jpg"
             alt="gdj"
           />
         </div>
@@ -67,11 +67,11 @@
         <h1>About me</h1>
         <br />
         <p>
-          Hello, my name is Tyson, and I’m a full-stack web developer. I have
-          experience with both front-end technologies like React and back-end
-          technologies like Node.js and Express. My goal is to build
-          comprehensive web solutions that meet both user and business needs,
-          ensuring a seamless experience from start to finish.
+          Hello, my name is Tyson, and I’m web developer. I have experience with
+          both front-end technologies like React and back-end technologies like
+          Node.js and Express. My goal is to build comprehensive web solutions
+          that meet both user and business needs, ensuring a seamless experience
+          from start to finish.
         </p>
         <div id="aliitlebit">
           <p>Name: Tyson Westley</p>
@@ -156,15 +156,14 @@
       <div class="clickExperience" style="display: block">
         <h1>Experience</h1>
         <p>
-          I have experience in full-stack web development, specializing in
-          front-end technologies like HTML, CSS, and JavaScript, along with
-          frameworks such as React. On the back-end, I’ve worked with Node.js,
-          Express, and databases like MySQL and MongoDB. I’ve built responsive,
-          user-friendly websites and applications, collaborating closely with
-          clients to meet their needs. I’m skilled in using Git for version
-          control and have deployed projects using cloud services like AWS.
-          Continuously learning and adapting, I strive to create efficient and
-          scalable web solutions.
+          I have experience in web development, specializing in front-end
+          technologies like HTML, CSS, and JavaScript, along with frameworks
+          such as React. On the back-end, I’ve worked with Node.js, Express, and
+          databases like MySQL and MongoDB. I’ve built responsive, user-friendly
+          websites and applications, collaborating closely with clients to meet
+          their needs. I’m skilled in using Git for version control and have
+          deployed projects using cloud services like AWS. Continuously learning
+          and adapting, I strive to create efficient and scalable web solutions.
         </p>
       </div>
       <div class="clickEducation" style="display: none">
