--- a/index.html
+++ b/index.html
@@ -74,12 +74,18 @@
           from start to finish.
         </p>
         <div id="aliitlebit">
-          <p>Name: Tyson Westley</p>
-          <p>Level:Senior</p>
-          <p>Working:Teacher&Developer</p>
-          <p>Email:nguyenquoclongtuyen11@gmail</p>
-          <p>My greatest teacher is Google. My biggest motivation is you.</p>
           <p>
+            <label class="LabelAll">Name:</label>Nguyễn Quốc Long Tuyển(Tyson)
+          </p>
+          <p><label class="LabelAll">Level:</label>Senior</p>
+          <p><label class="LabelAll">Working:</label>Teacher&Developer</p>
+          <p>
+            <label class="LabelAll">Email:</label>nguyenquoclongtuyen11@gmail
+          </p>
+          <p style="color: #e2e2b6">
+            My greatest teacher is Google. My biggest motivation is you.
+          </p>
+          <p style="color: #e2e2b6">
             Turning challenges into opportunities, one line of code at a time.
           </p>
         </div>
